1.2.0 (???)
  # general
  - THE LOGSTASH EVENT SCHEMA HAS CHANGED.
      TODO(sissel): Document what this means, etc.
  - The old logstash web ui has been replaced by Kibana 3. Kibana is a far
    superior search and analytics interface.
  - ElasticSearch version 0.90.0 is included.
  - The multiline filter is replaced by the multiline codec.
  - Many deprecated features have been removed.
    TODO(sissel): Document what these were.
  - 'type' is no longer a required setting on inputs.
  - feature: codecs. Used to implement encoding/decoding of events
    for input and output plugins.
      TODO(nickethier): Document how to use and how to hack.

  ## inputs
  - bugfix: gelf: work around gelf parser errors (#476, patch by Chris McCoy)
  - broken: the twitter input is disabled because the twitter stream v1 api is
    no longer supported and I couldn't find a replacement library that works
    under jruby.

  ## filters
  - feature: grok: 'singles' now defaults to true.
  - bugfix: grep: allow repeating a field in the hash config (LOGSTASH-919)
  - feature: specify timezone in date filter (#470, patch by Philippe Weber)
  - feature: grok setting 'overwrite' now lets you overwrite fields instead
    of appending to them.
  - feature: the useragent filter now defaults to writing results to the top
    level of the event instead of "ua"
  - feature: grok now defaults 'singles' to true, meaning captured fields are
    stored as single values in most cases instead of the old behavior of being
    captured as an array of values.
  - removed: the multiline filter is gone. See the multiline codec instead.

  ## outputs
  - feature: irc: add messages_per_second tunable (LOGSTASH-962)
  - bugfix: emails: restored initial really useful documentation
  - improvement: emails: allow @message, @source, @... in match (LOGSTASH-826,
    LOGSTASH-823) 

1.1.13 (May 28, 2013)
  ## general
  - fixed bug in static file serving for logstash web (LOGSTASH-1067)

  ## outputs