@@ -1,24 +1,12 @@
 require "logstash/namespace"
 
 module LogStash::Util
-  PR_SET_NAME = 15
-
   UNAME = case RbConfig::CONFIG["host_os"]
     when /^linux/; "linux"
     else; RbConfig::CONFIG["host_os"]
   end
 
-  module LibC
-    if UNAME == "linux"
-      require "ffi"
-      extend FFI::Library
-      ffi_lib 'c'
-
-      # Ok so the 2nd arg isn't really a string... but whaatever
-      attach_function :prctl, [:int, :string, :long, :long, :long], :int
-    end
-  end
-
+  PR_SET_NAME = 15
   def self.set_thread_name(name)
     if RUBY_ENGINE == "jruby"
       # Keep java and ruby thread names in sync.
@@ -27,6 +15,7 @@ module LogStash::Util
     Thread.current[:name] = name
     
     if UNAME == "linux"
+      require "logstash/util/prctl"
       # prctl PR_SET_NAME allows up to 16 bytes for a process name
       # since MRI 1.9, JRuby, and Rubinius use system threads for this.
       LibC.prctl(PR_SET_NAME, name[0..16], 0, 0, 0)
